[package]
name = "cargo-list"
version = "0.33.6"
edition = "2024"
description = "List and update installed crates"
repository = "https://github.com/qtfkwk/cargo-list"
license = "MIT"
readme = "README.md"
keywords = [ "cargo", "install", "list", "update", "crates" ]
categories = [ "development-tools::cargo-plugins", "command-line-utilities" ]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
dirs = "6.0.0"
indexmap = { version = "2.12.0", features = ["rayon"] }
lazy_static = "1.5.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinners = "4.1.1"
sprint = "0.12.3"
veg = { version = "0.6.3", features = ["colored"] }

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.2"
