[package]
name = "cargo-list"
version = "0.34.1"
edition = "2024"
description = "List and update installed crates"
repository = "https://github.com/qtfkwk/cargo-list"
license = "MIT"
readme = "README.md"
keywords = ["cargo", "install", "list", "update", "crates"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
dirs = "6.0.0"
indexmap = { version = "2.14.0", features = ["rayon"] }
rayon = "1.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "socks"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spinners = "4.2.0"
sprint = "0.12.5"
veg = { version = "0.6.5", features = ["colored"] }

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.5"
